force-app/main/default/objects/Opportunity/fields/BirthDate__c.field-meta.xml
<CustomField>
    <fullName>BirthDate__c</fullName>
    <label>Data de Nascimento</label>
    <type>Date</type>
</CustomField>