force-app/main/default/objects/Opportunity/fields/Fonte__c.field-meta.xml
<CustomField>
    <fullName>Fonte__c</fullName>
    <label>Fonte</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Parceiros</fullName>
            </value>
            <value>
                <fullName>Indicação Interna Colaboradores</fullName>
            </value>
            <value>
                <fullName>Indicação Interna Consultores</fullName>
            </value>
            <value>
                <fullName>Indicação Clientes MGM</fullName>
            </value>
            <value>
                <fullName>Parcerias ACL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>