force-app/main/default/objects/Opportunity/fields/Plano_selecionado__c.field-meta.xml
<CustomField>
    <fullName>Plano_selecionado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plano selecionado</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Id</field>
            <operation>equals</operation>
            <valueField>Plano__c.Oportunidade__r.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Plano__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>