force-app/main/default/objects/Opportunity/fields/Score_SERASA__c.field-meta.xml
<CustomField>
    <fullName>Score_SERASA__c</fullName>
    <label>Score SERASA</label>
    <length>100</length>
    <type>Text</type>
</CustomField>