force-app/main/default/objects/Opportunity/fields/Valor_Conta__c.field-meta.xml
<CustomField>
    <fullName>Valor_Conta__c</fullName>
    <label>Consumo médio informado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>