force-app/main/default/objects/Opportunity/fields/Valor_da_Fatura_R__c.field-meta.xml
<CustomField>
    <fullName>Valor_da_Fatura_R__c</fullName>
    <label>Consumo médio calculado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>