force-app/main/default/objects/Opportunity/recordTypes/Oportunidade_Lead.recordType-meta.xml
<RecordType>
    <fullName>Oportunidade_Lead</fullName>
    <active>true</active>
    <businessProcess>LUZ</businessProcess>
    <label>Oportunidade Luz</label>
</RecordType>