force-app/main/default/objects/Opportunity/recordTypes/Oportunidade_PF_Luz.recordType-meta.xml
<RecordType>
    <fullName>Oportunidade_PF_Luz</fullName>
    <active>true</active>
    <businessProcess>GD - PF - Luz</businessProcess>
    <label>Oportunidade PF - Luz</label>
</RecordType>