force-app/main/default/objects/Opportunity/recordTypes/Oportunidade_PJ_Luz.recordType-meta.xml
<RecordType>
    <fullName>Oportunidade_PJ_Luz</fullName>
    <active>true</active>
    <businessProcess>GD - PJ - Luz</businessProcess>
    <label>Oportunidade PJ - Luz</label>
</RecordType>