force-app/main/default/objects/Opportunity/recordTypes/Oportunidade_Thymos.recordType-meta.xml
<RecordType>
    <fullName>Oportunidade_Thymos</fullName>
    <active>true</active>
    <businessProcess>Thymos Comercial</businessProcess>
    <label>Oportunidade Thymos</label>
</RecordType>