force-app/main/default/objects/Opportunity/recordTypes/OportunidadeThymos_Consultoria.recordType-meta.xml
<RecordType>
    <fullName>OportunidadeThymos_Consultoria</fullName>
    <active>true</active>
    <businessProcess>Thymos Consultoria</businessProcess>
    <label>OportunidadeThymos Consultoria</label>
</RecordType>