force-app/main/default/objects/Opportunity/recordTypes/Opportunity_Delta.recordType-meta.xml
<RecordType>
    <fullName>Opportunity_Delta</fullName>
    <active>true</active>
    <businessProcess>Delta</businessProcess>
    <label>Oportunidade Delta</label>
</RecordType>