force-app/main/default/objects/Opportunity/validationRules/Close_Lost.validationRule-meta.xml
<ValidationRule>
    <fullName>Close_Lost</fullName>
    <active>false</active>
    <description>Para classicar uma oportunidade como encerrada perdida é necessário informar o motivo e uma observação.</description>
    <errorConditionFormula>AND(ISPICKVAL(StageName,&apos;Closed Lost&apos;), ISBLANK(LossReasonObs__c) || ISPICKVAL(LossReason__c, &apos;&apos;))</errorConditionFormula>
    <errorDisplayField>LossReason__c</errorDisplayField>
    <errorMessage>Favor preencher os campos de observação e motivo da Perda.</errorMessage>
</ValidationRule>