force-app/main/default/objects/Opportunity/validationRules/reason_for_loss.validationRule-meta.xml
<ValidationRule>
    <fullName>reason_for_loss</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT(ISBLANK(LossReasonObs__c)), NOT(ISPICKVAL(LossReason__c, &apos;&apos;)), NOT(ISPICKVAL(StageName, &apos;Closed Lost&apos;)))</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Necessário alterar o status da oportunidade para Encerrada e perdida</errorMessage>
</ValidationRule>