force-app/main/default/objects/Opportunity/validationRules/VR_NaturezaJuridica_LUZ.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_NaturezaJuridica_LUZ</fullName>
    <active>true</active>
    <description>O campo Natureza Jurídica deve ser preenchido.</description>
    <errorConditionFormula>AND(				
		  OR(
								RecordType.DeveloperName = &apos;Oportunidade_PJ_Luz&apos;, 
								RecordType.DeveloperName = &apos;Oportunidade_PF_Luz&apos;
								),					
				ISNEW() ,
				ISPICKVAL(Pessoa_F_sica_Jur_dica__c, &quot;&quot;) 
				)</errorConditionFormula>
    <errorDisplayField>Pessoa_F_sica_Jur_dica__c</errorDisplayField>
    <errorMessage>O campo Natureza Jurídica deve ser preenchido.</errorMessage>
</ValidationRule>