force-app/main/default/objects/Opportunity/listViews/AllOpportunities.listView-meta.xml
<ListView>
    <fullName>AllOpportunities</fullName>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.PROBABILITY</columns>
    <columns>OPPORTUNITY.TYPE</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Company__c</field>
        <operation>equals</operation>
        <value>LUZ</value>
    </filters>
    <label>Todas as oportunidades</label>
</ListView>