force-app/main/default/objects/Opportunity/listViews/ClosingThisMonth.listView-meta.xml
<ListView>
    <fullName>ClosingThisMonth</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Company__c</field>
        <operation>equals</operation>
        <value>THYMOS</value>
    </filters>
    <label>Fechando neste mês</label>
</ListView>